// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`addModerator 1`] = `
Object {
  "graphql": Object {
    "query": "mutation ($personId: ID, $communityId: ID) {
        addModerator(personId: $personId, communityId: $communityId) {
          id
          moderators (first: 100) {
            items {
              id
              name
              avatarUrl
            }
          }
        }
      }",
    "variables": Object {
      "communityId": 111,
      "personId": 123,
    },
  },
  "meta": Object {
    "communityId": 111,
    "optimistic": true,
    "personId": 123,
  },
  "type": "ADD_MODERATOR",
}
`;

exports[`clearModeratorSuggestions 1`] = `
Object {
  "type": "CLEAR_MODERATOR_SUGGESTIONS",
}
`;

exports[`fetchModeratorSuggestions 1`] = `
Object {
  "graphql": Object {
    "query": "query ($id: ID, $autocomplete: String) {
        community (id: $id) {
          id
          members (first: 10, autocomplete: $autocomplete) {
            hasMore
            items {
              id
              name
              avatarUrl
            }
          }
        }
      }",
    "variables": Object {
      "autocomplete": "to",
      "id": 123,
    },
  },
  "meta": Object {
    "extractModel": "Community",
  },
  "type": "FETCH_MODERATOR_SUGGESTIONS",
}
`;

exports[`removeModerator 1`] = `
Object {
  "graphql": Object {
    "query": "mutation ($personId: ID, $communityId: ID, $isRemoveFromCommunity: Boolean) {
        removeModerator(personId: $personId, communityId: $communityId, isRemoveFromCommunity: $isRemoveFromCommunity) {
          id
          moderators (first: 100) {
            items {
              id
              name
              avatarUrl
            }
          }
        }
      }",
    "variables": Object {
      "communityId": 111,
      "isRemoveFromCommunity": true,
      "personId": 123,
    },
  },
  "meta": Object {
    "communityId": 111,
    "isRemoveFromCommunity": true,
    "optimistic": true,
    "personId": 123,
  },
  "type": "REMOVE_MODERATOR",
}
`;
